Nouvelles fonctinnalités : Vote sur les sondages, compte anonyme créé lors de la sousmission d'un vote lorsque non connecté, lors de la création d'un compte lorsque anonyme, fusion des données. implémentation de vote unique par utilisateur (on ne peut voter qu'un fois); Observation des résultats implémentés (si tu est l'auteur : en tout temps, sinon, seulement quand tu a un compte (anonyme ou non) et que la date actuelle est après la date d'échéance); consultation d'autre profil et abonnement (reste à`implémenter un firebase function pour envoyer des notifications push lorsque l'auteur auquel tu t'es abonné publie quelque chose);

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,10 @@
     <string name="navigation_drawer_close">Fermer le menu</string>
 
     <string name="action_settings">Paramètres</string>
-    <string name="title_activity_main">Accueil</string>
+    <string name="title_activity_main">AskinQuery</string>
 
     <string name="profile_group_title">Profil</string>
     <string name="Connexion"><u>Se connecter</u></string>
     <string name="Deconnexion"><u>Se déconnecter</u></string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
